--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- Герой -->
     <section class="hero overlay">
         <div class="container">
-            <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-button">Заказать услугу</button>
         </div>
     </section>
@@ -317,7 +317,7 @@
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="clients-list">
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-1"></use>
                         </svg>
@@ -325,7 +325,7 @@
                 </li>
 
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-2"></use>
                         </svg>
@@ -333,7 +333,7 @@
                 </li>
 
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-3"></use>
                         </svg>
@@ -341,7 +341,7 @@
                 </li>
 
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-4"></use>
                         </svg>
@@ -349,7 +349,7 @@
                 </li>
 
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-5"></use>
                         </svg>
@@ -357,7 +357,7 @@
                 </li>
 
                 <li class="clients-item">
-                    <a href="" clas="clients-link">
+                    <a href="" class="clients-link">
                         <svg class="clients-logo">
                             <use href="./images/symbol-defs.svg#icon-client-6"></use>
                         </svg>
@@ -389,7 +389,7 @@
         <h3 class="footer-social-title">присоединяйтесь</h3>
         <ul class="footer-social-list">
             <li class="footer-social-item">
-                <a href="" clas="footer-social-link">
+                <a href="" class="footer-social-link">
                     <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
@@ -397,7 +397,7 @@
             </li>
 
             <li class="footer-social-item">
-                <a href="" clas="footer-social-link">
+                <a href="" class="footer-social-link">
                     <svg class="footer-social-icon">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
@@ -405,7 +405,7 @@
             </li>
             
             <li class="footer-social-item">
-                <a href="" clas="footer-social-link">
+                <a href="" class="footer-social-link">
                     <svg class="footer-social-icon">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
@@ -413,7 +413,7 @@
             </li>
 
             <li class="footer-social-item">
-                <a href="" clas="footer-social-link">
+                <a href="" class="footer-social-link">
                     <svg class="footer-social-icon">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
