--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,15 @@
         </nav>
         
         <ul class="auth-nav auth-nav-list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
-            <li class="item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
+            <li class="item">
+                <a href="mailto:info@devstudio.com" class="auth-nav-link">
+                    <svg class="icon-mail" width="16" height="12">
+                        <use href="./images/symbol-defs.svg#icon-mail"></use>
+                    </svg>info@devstudio.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="auth-nav-link"><svg class="icon-phone" width="10" height="16">
+                        <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
@@ -159,17 +166,57 @@
 <!-- Футер -->
 <footer class="footer">
     <div class="container">
-        <h2 class="footer-title">Контакты</h2>
-        <a href="" lang="en" class="logo-link logo-footer">Web<span class="footer-logo-text">Studio</span></a>
-        <address class="footer-adress">
-            <ul class="contacts">
-                <li class="contacts-address item">
-                    г. Киев, пр-т Леси Украинки, 26
+        <div class="footer-adress">
+            <h2 class="footer-title">Контакты</h2>
+            <a href="" lang="en" class="logo-link logo-footer">Web<span class="footer-logo-text">Studio</span></a>
+            <address class="footer-adress">
+                <ul class="contacts">
+                    <li class="contacts-address item">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </li>
+                    <li class="item"><a href="mailto:info@example.com" class="contacts-link">info@example.com</a></li>
+                    <li class="item"><a href="tel:+380991111111" class="contacts-link">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
+
+        <div class="footer-social">
+            <h3 class="footer-social-title">присоединяйтесь</h3>
+            <ul class="footer-social-list">
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-social-icon">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="item"><a href="mailto:info@example.com" class="contacts-link">info@example.com</a></li>
-                <li class="item"><a href="tel:+380991111111" class="contacts-link">+38 099 111 11 11</a></li>
+
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-social-icon">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-social-icon">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="footer-social-item">
+                    <a href="" class="footer-social-link">
+                        <svg class="footer-social-icon">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
             </ul>
-        </address>
+
+        </div>
     </div>
     </footer>
 </body>
