--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
 
 <!-- Футер -->
 <footer class="footer">
-    <div class="container">
+    <div class="footer-container container">
         <div class="footer-adress">
             <h2 class="footer-title">Контакты</h2>
             <a href="" lang="en" class="logo-link logo-footer">Web<span class="footer-logo-text">Studio</span></a>
