--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </svg>
                 </div>
                 <h3 class="benefits-title">Планирование</h3>
-                <p class="benefits-details">
+                <p class="benefits-items">
                     Равным образом консультация с широким активом в значительной степени обуславливает.
                 </p>
             </li>
@@ -370,7 +370,7 @@
 
 <!-- Футер -->
 <footer class="footer">
-    <div class="container">
+    <div class="footer-container container">
         <div class="footer-adress">
     <h2 class="footer-title">Контакты</h2>
     <a href="" lang="en" class="logo-link logo-footer">Web<span class="footer-logo-text">Studio</span></a>
